# 2024_SharedAutonomyChallange

./: .gitignore  README.md  requirements.txt
Cpp-Robot-Code/: CMakeLists.txt
Cpp-Robot-Code/agents/: CMakeLists.txt  agent_base.h  agent_runner.cpp  agent_runner.h  collect_data.cpp  collect_data.h  motion_command.h  shoot.cpp  shoot.h  walk_tuner.cpp  walk_tuner.h
Cpp-Robot-Code/cam_utils/: CMakeLists.txt  cammsg.h
Cpp-Robot-Code/fw_sydney/: CMakeLists.txt  main.cpp
Cpp-Robot-Code/gamecontrollerclient/: CMakeLists.txt  gamecontrollerclient.cpp  gamecontrollerclient.h
Cpp-Robot-Code/head_control/: CMakeLists.txt  head_control.cpp  head_control.h
Cpp-Robot-Code/jpegcompressor/: CMakeLists.txt  jpegcamimageprocessor.cpp  jpegcamimageprocessor.h  jpegcompressor.cpp  jpegcompressor.h  jpegcompressorconfig.h
Cpp-Robot-Code/lola_comm/: CMakeLists.txt  lola_comm.cpp  lola_comm.h
Cpp-Robot-Code/motion/: CMakeLists.txt  keyframe_controller.cpp  keyframe_controller.h  motion.cpp  motion.h
Cpp-Robot-Code/naomessages/: CMakeLists.txt  log.proto  log_indexed.proto  lola_lowlevel.proto  motion.proto  motion_editor.proto  motioncontrol.proto  visionlogging.proto  visualizer.proto  worldmodel.proto
Cpp-Robot-Code/orders/: CMakeLists.txt  collectdataorder.h  head_focus.h  keepgoalorder.h  moveballgoalorder.h  moveballorder.h  noorder.h  order.h  penaltyshootorder.h  shootorder.h  walktopositionorder.h
Cpp-Robot-Code/protobuf_utils/: CMakeLists.txt  point_2d_helper.h
Cpp-Robot-Code/sensor_data/: CMakeLists.txt  sensor_data.h
Cpp-Robot-Code/signal_handling/: CMakeLists.txt  signalhandling.cpp  signalhandling.h
Cpp-Robot-Code/soccerfield/: CMakeLists.txt  soccerfield.cpp  soccerfield.h  soccerfielddefinitions.cpp  soccerfielddefinitions.h  soccerfieldinstance.cpp  soccerfieldinstance.h
Cpp-Robot-Code/sockethelper/: CMakeLists.txt
Cpp-Robot-Code/spl/: CMakeLists.txt
Cpp-Robot-Code/team_communication/: CMakeLists.txt  team_comm.cpp  team_comm.h
Cpp-Robot-Code/team_strategy/: CMakeLists.txt  shared_autonomy_strategy.cpp  shared_autonomy_strategy.h  shared_manual_strategy.cpp  shared_manual_strategy.h  team_strategy.cpp  team_strategy.h  team_strategy_factory.cpp  team_strategy_factory.h
Cpp-Robot-Code/team_strategy/features/: position_area.h  position_util.h
Cpp-Robot-Code/utils/: CMakeLists.txt  envinfo.h  leds.cpp  stl_ext.h
Cpp-Robot-Code/walking_engine/: CMakeLists.txt
Cpp-Robot-Code/worldmodel/: CMakeLists.txt  worldmodel.cpp  worldmodel.h
Python-GUI/src/app/: app.py
Python-GUI/src/joystickhandler/: joystick_handler.py
Python-GUI/src/naobackend/: robot_option_connection.py
Python-GUI/src/naoshow/: CameraStream.py  UDPReceiver.py
Python-GUI/src/walkcontrol/: walk_control.py
src/: main.py  main.sh
src/naoshow/: Gui.py
