cmake_minimum_required(VERSION 3.24)

project(firmware_5.0)

#set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#set(CMAKE_COLOR_DIAGNOSTICS ON)

# set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake)
# add_compile_options(-fPIC -fdiagnostics-color=always -O3 -Wall -mfpmath=sse -ggdb -Wno-c++17-extensions)
add_compile_options(-mssse3)

find_package(Boost COMPONENTS system program_options filesystem REQUIRED QUIET)
find_package(Protobuf REQUIRED)
find_package(GRPC)

# function(message)
#    if (NOT MESSAGE_QUIET)
#        _message(${ARGN})
#    endif()
# endfunction()

# set(MESSAGE_QUIET ON)
# add_subdirectory(3rdparty/zlib-ng)
# unset(MESSAGE_QUIET)

#add_subdirectory(3rdparty/dbg)
#add_subdirectory(3rdparty/easy_profiler)
#add_subdirectory(3rdparty/eigen)
#add_subdirectory(3rdparty/liblodepng)
#add_subdirectory(3rdparty/msgpack)
#add_subdirectory(3rdparty/nlohmann_json)
#add_subdirectory(agent_utils)
# add_subdirectory(localization)

add_subdirectory(agents)
#add_subdirectory(calibration)
add_subdirectory(cam_utils)
#add_subdirectory(camera)
#add_subdirectory(camera_stream)
#add_subdirectory(dance)
#add_subdirectory(daemon_handling)
#add_subdirectory(flightrecorder)
#add_subdirectory(flightrecorder/client)
add_subdirectory(fw_sydney)
add_subdirectory(gamecontrollerclient)
#add_subdirectory(gyro_calibration)
add_subdirectory(head_control)
#add_subdirectory(imagetools)
#add_subdirectory(imu)
#add_subdirectory(infocast)
#add_subdirectory(jerseynumber)
add_subdirectory(jpegcompressor)
#add_subdirectory(kinematics)
#add_subdirectory(leds)
add_subdirectory(lola_comm)
#add_subdirectory(lola_connector)
add_subdirectory(motion)
#add_subdirectory(motion_control)
#if(GRPC_FOUND)
#    add_subdirectory(motion_editor)
#endif()
#add_subdirectory(multi_target_tracker)
add_subdirectory(naomessages)
#add_subdirectory(near_obstacle_tracker)
add_subdirectory(option_framework)
add_subdirectory(orders)
#add_subdirectory(own_visibility)
#add_subdirectory(presentation)
add_subdirectory(sensor_data)
add_subdirectory(signal_handling)
add_subdirectory(soccerfield)
add_subdirectory(sockethelper)
#add_subdirectory(soundprocessing)
add_subdirectory(spl)
add_subdirectory(team_communication)
add_subdirectory(team_strategy)
#add_subdirectory(tutorial)
add_subdirectory(utils)
#add_subdirectory(vision)
#add_subdirectory(vision_logger)
#add_subdirectory(vision_primitives)
#add_subdirectory(visualizer)
add_subdirectory(walking_engine)
add_subdirectory(worldmodel)
add_subdirectory(protobuf_utils)
#add_subdirectory(fsme)
